--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <title>Hardik Sharma Photography</title>
 <link rel="stylesheet" type="text/css" href="navbar.css">
 <link rel="stylesheet" type="text/css" href="footer.css">
+
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Raleway:wght@400;600;900&display=swap" rel="stylesheet">
 <style>
 
 .backim .overtext{
@@ -15,7 +17,7 @@ left:0;
 right:0;
 top:35%;
 letter-spacing:0.5vw;
-font-size:3.1vw;
+font-size:4vw;
 font-family:baskerville old face;
 text-align:center;
 color:white;
@@ -46,7 +48,7 @@ margin-top:2%;
 text-align:center;
 font-size:1.8vw;
 font-family:raleway;
-
+margin-bottom:2%;
 }
 #quote{
 font-style:italic;
@@ -66,53 +68,12 @@ to{transform:scaleY(1);transform:translate(0px,3vw);}
 }
 
 </style>
-<script language="JavaScript">
-/*var flag=0;
 
-slideshow();
-function slideshow()
-{
-var base=document.getElementsByClassName("slides");
-
-
-for(i=0;i<3;i++)
-{
-	base[i].style.display="none";
-	
-}
-flag++;
-
-if(flag>3)
-{
-flag=1;
-}
-base[flag-1].style.display="block";
-setTimeout(slideshow,2000);
-}
-*/
-var flag=0;
-slideshow();
-
-function slideshow() {
-  var i;
-  var base = document.getElementsByClassName("slides");
-
-  for (i = 0; i < base.length; i++) {
-    base[i].style.display = "none";  
-  }
-  flag++;
-  if (flag > base.length) {flag = 1}    
-  
-  base[flag-1].style.display = "block";  
-  
-  setTimeout(slideshow, 2000); // Change image every 2 seconds
-}
-</script>
 </head>
 <body>
 
 <div id="navbar">
-<div class="mylogo"><a href="index.html"><img class="mylogo" src="F:\portfolio\logos\mylogo.jpeg"></a></div>
+<div class="mylogo"><a href="index.html"><img class="mylogo" src="logos\mylogo.jpeg"></a></div>
 <nav>
 <a class="top" href="index.html">HOME</a>
 <a class="top" href="about.html">ABOUT </a>
@@ -124,12 +85,9 @@ function slideshow() {
 <!--Space for slideshow-->
 <div class="backim">
 	<img class="slides" src="b1 (2).jpg">
-	<!-- <img class="slides" src="b1 (1).jpg">
-	<img class="slides" src="blog_card2.jpeg"> -->
 	<div class="overtext">
 	PHOTOGRAPHY.REDEFINED.
 	<hr id="hr1">
-	<!-- <hr id="hr2"> -->
 	</div>
 </div>
 	<div id="content">
@@ -147,17 +105,17 @@ function slideshow() {
 <footer id="foot">
 	<div class="socicon">
 		<a  href="https://www.instagram.com/hardiks_51/">
-		<img src="F:\portfolio\logos\instagram.jpg" height="3%" width="3%">
+		<img src="logos\instagram.jpg" height="3%" width="3%">
 		</a>
 	</div>
 	<div class="socicon">
 		<a href="https://www.linkedin.com/in/hardik-sharma-a0682b196">
-			<img src="F:\portfolio\logos\linkedin.png" height="3%" width="3%">
+			<img src="logos\linkedin.png" height="3%" width="3%">
 		</a>
 	</div>
 	<div class="socicon">
 		<a href="mailto:hardik00051@gmail.com">
-			<img src="F:\portfolio\logos\mail.png" height="3%" width="3%">
+			<img src="logos\mail.png" height="3%" width="3%">
 		</a>	
 	</div>
 	
