--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@ box-sizing:border-box;
 	
 	<div class="image_center">
 	<div id="me1">
-	<img src="\logos\me.jpg"> 
+	<img src="logos\me.jpg"> 
 	</div>
 	<div id="me2">
 	<img src="logos\mylogo.jpeg"> 
