--- a/culture.html
+++ b/culture.html
@@ -92,7 +92,7 @@ font-weight:bolder;
 </head>
 <body>
 <div id="navbar">
-<div class="mylogo"><a href="index.html"><img class="mylogo" src="F:\portfolio\logos\mylogo.jpeg"></a></div>
+<div class="mylogo"><a href="index.html"><img class="mylogo" src="logos\mylogo.jpeg"></a></div>
 <nav>
 <a class="top" href="index.html">HOME</a>
 <a class="top" href="about.html">ABOUT </a>
@@ -139,17 +139,17 @@ font-weight:bolder;
 <footer id="foot">
 	<div class="socicon">
 		<a  href="https://www.instagram.com/hardiks_51/">
-		<img src="F:\portfolio\logos\instagram.jpg" height="3%" width="3%">
+		<img src="logos\instagram.jpg" height="3%" width="3%">
 		</a>
 	</div>
 	<div class="socicon">
 		<a href="https://www.linkedin.com/in/hardik-sharma-a0682b196">
-			<img src="F:\portfolio\logos\linkedin.png" height="3%" width="3%">
+			<img src="logos\linkedin.png" height="3%" width="3%">
 		</a>
 	</div>
 	<div class="socicon">
 		<a href="mailto:hardik00051@gmail.com">
-			<img src="F:\portfolio\logos\mail.png" height="3%" width="3%">
+			<img src="logos\mail.png" height="3%" width="3%">
 		</a>	
 	</div>
 	
