Added storage support

--- a/contact.html
+++ b/contact.html
@@ -261,7 +261,26 @@ Hey there! Want to give feedback? Have any questions? Or want to collaborate? Fi
 	<div id="footext" style="font-size:1.5vw;";>©Copyright 2020,Hardik Sharma. All rights reserved.</div>
 
 </footer>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script>
 
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBiOF37Vn53bDRHPj5S-ADPzsrZvDrpd2Q",
+    authDomain: "collab-data-portfolio.firebaseapp.com",
+    databaseURL: "https://collab-data-portfolio.firebaseio.com",
+    projectId: "collab-data-portfolio",
+    storageBucket: "collab-data-portfolio.appspot.com",
+    messagingSenderId: "11081966459",
+    appId: "1:11081966459:web:9b19f87461aff35fba13de"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 </body>
 </html>
 	
