Added Dtabase support

--- a/contact.html
+++ b/contact.html
@@ -280,6 +280,7 @@ Hey there! Want to give feedback? Have any questions? Or want to collaborate? Fi
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
+  var database = firebase.database();
 </script>
 </body>
 </html>
